--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
-  "name": "ui-com-lib",
-  "version": "1.0.0",
+  "name": "@nikhil-tayal/ui-lib-2",
+  "version": "1.0.1",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/nikhil-tayal"
+  },
+
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
