--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "@nikhil-tayal/ui-lib-2",
-  "version": "1.0.1",
+  "version": "1.0.11",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/nikhil-tayal"
   },
-
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -17,16 +16,28 @@
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-typescript": "^8.3.1",
     "@types/react": "^17.0.41",
-    "react": "^17.0.2",
+    "postcss": "^8.4.12",
+    "react-dom": "^17.0.2",
     "rollup": "^2.70.1",
     "rollup-plugin-dts": "^4.2.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-terser": "^7.0.2",
     "tslib": "^2.3.1",
     "typescript": "^4.6.2"
   },
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
+  "peerDependencies": {
+    "react": "^17.0.2"
+  },
   "files": [
     "dist"
   ],
-  "types": "dist/index.d.ts"
+  "types": "dist/index.d.ts",
+  "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.5.1"
+  }
 }
