--- a/.github/workflows/ui-lib-dev.yml
+++ b/.github/workflows/ui-lib-dev.yml
@@ -23,10 +23,10 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
+        cache: 'yarn'
     - run: ls -a
-    - run: npm ci
-    - run: npm run rollup
+    - run: yarn ci
+    - run: yarn rollup
     - run: npm version patch
-    - run: npm publish
+    - run: yarn publish
 
