--- a/.github/workflows/ui-lib-dev.yml
+++ b/.github/workflows/ui-lib-dev.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: UI Library deployment
+name: 'publish'
 
 on:
   push:
@@ -23,11 +23,11 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-    - run: ls -a
+        registry-url: https://registry.npmjs.com
     - run: yarn
     - run: yarn rollup
-    - name: Update version in package.json
-      uses: maks-stupak/gh-action-bump-version@v7.1.5
+    - run: npm publish --access public
+      env:
+          NPM_AUTH_TOKEN:{{secrets.NPM_AUTH_TOKEN}}
 
-    - run: yarn publish
 
