--- a/.github/workflows/ui-lib-dev.yml
+++ b/.github/workflows/ui-lib-dev.yml
@@ -28,6 +28,6 @@ jobs:
     - run: yarn rollup
     - run: npm publish --access public
       env:
-          NPM_AUTH_TOKEN:{{secrets.NPM_AUTH_TOKEN}}
+          NPM_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
 
 
