--- a/.github/workflows/ui-lib-dev.yml
+++ b/.github/workflows/ui-lib-dev.yml
@@ -22,7 +22,7 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-        registry-url: https://registry.npmjs.com
+        registry-url: https://npm.pkg.github.com
     - run: yarn
     - run: yarn rollup
     - run: npm publish
