--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nikhil-tayal/ui-lib-2",
-  "version": "1.0.15",
+  "version": "1.0.16",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/nikhil-tayal"
   },
@@ -8,7 +8,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "rollup": "rollup -c",
-    "publish:patch": "yarn && yarn version --patch && yarn rollup"
+    "yarn:build": "yarn && yarn rollup",
+    "publish:patch": "yarn version --patch && yarn:build",
+    "publish:minor": "yarn version --minor && yarn:build",
+    "publish:major": "yarn version --major && yarn:build",
+    "publish:custom": "yarn version && yarn:build"
   },
   "author": "",
   "license": "MIT",
