--- a/.github/workflows/ui-lib-dev.yml
+++ b/.github/workflows/ui-lib-dev.yml
@@ -25,6 +25,7 @@ jobs:
         registry-url: https://npm.pkg.github.com
     - run: yarn
     - run: yarn rollup
+    - run: yarn version --patch
     - run: npm publish
       env:
           NODE_AUTH_TOKEN: ${{secrets.NODE_AUTH_TOKEN}}
