--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nikhil-tayal/ui-lib-2",
-  "version": "1.0.23",
+  "version": "1.0.24",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/nikhil-tayal"
   },
@@ -10,7 +10,7 @@
     "rollup": "rollup -c",
     "yarn:build": "yarn && yarn rollup",
     "git": "git add . && git commit -m",
-    "publish:patch": "yarn version --patch && yarn yarn:build",
+    "publish:patch": "yarn version --patch && yarn yarn:build && git",
     "publish:minor": "yarn version --minor && yarn arn:build",
     "publish:major": "yarn version --major && yarn yarn:build",
     "publish:custom": "yarn version && yarn yarn:build"
