--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nikhil-tayal/ui-lib-2",
-  "version": "1.0.27",
+  "version": "1.0.29",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/nikhil-tayal"
   },
@@ -8,21 +8,32 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "rollup": "rollup -c",
-    "yarn:build": "yarn && yarn rollup",
+    "dev:build": "yarn && yarn rollup",
     "git": "git add . && git commit -m",
-    "publish:patch": "yarn yarn:build && yarn version --patch && yarn git",
-    "publish:minor": "yarn yarn:build && yarn version --minor && yarn git",
-    "publish:major": "yarn yarn:build && yarn version --major && yarn git",
-    "publish:custom": "yarn yarn:build && yarn version && yarn git"
+    "publish:patch": "yarn dev:build && yarn version --patch && yarn git",
+    "publish:minor": "yarn dev:build && yarn version --minor && yarn git",
+    "publish:major": "yarn dev:build && yarn version --major && yarn git",
+    "publish:custom": "yarn dev:build && yarn version && yarn git",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.17.8",
     "@rollup/plugin-commonjs": "^21.0.2",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-typescript": "^8.3.1",
+    "@storybook/addon-actions": "^6.4.19",
+    "@storybook/addon-essentials": "^6.4.19",
+    "@storybook/addon-interactions": "^6.4.19",
+    "@storybook/addon-links": "^6.4.19",
+    "@storybook/react": "^6.4.19",
+    "@storybook/testing-library": "^0.0.9",
     "@types/react": "^17.0.41",
+    "babel-loader": "^8.2.3",
     "postcss": "^8.4.12",
+    "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "rollup": "^2.70.1",
     "rollup-plugin-dts": "^4.2.0",
