--- a/.github/workflows/package-publish.yml
+++ b/.github/workflows/package-publish.yml
@@ -27,6 +27,6 @@ jobs:
     - run: yarn rollup
     - run: npm publish
       env:
-          NODE_AUTH_TOKEN: ${{secrets.NODE_AUTH_TOKEN}}
+          NPM_TOKEN: ${{secrets.NPM_TOKEN}}
 
 
