--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@nikhil-tayal/ui-lib-2",
-  "version": "1.0.44",
+  "version": "0.0.0-development",
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com/nikhil-tayal"
+    "registry": "https://registry.npmjs.org/nikhil-tayal"
   },
   "description": "",
   "scripts": {
@@ -15,7 +15,9 @@
     "publish:major": "yarn dev:build && yarn version --major && yarn git",
     "publish:custom": "yarn dev:build && yarn version && yarn git",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "semantic-release": "semantic-release",
+    "commit": "cz"
   },
   "author": "",
   "license": "MIT",
@@ -24,14 +26,15 @@
     "@rollup/plugin-commonjs": "^21.0.2",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-typescript": "^8.3.1",
-    "@storybook/addon-actions": "^6.4.19",
-    "@storybook/addon-essentials": "^6.4.19",
-    "@storybook/addon-interactions": "^6.4.19",
-    "@storybook/addon-links": "^6.4.19",
-    "@storybook/react": "^6.4.19",
+    "@storybook/addon-actions": "^6.4.20",
+    "@storybook/addon-essentials": "^6.4.20",
+    "@storybook/addon-interactions": "^6.4.20",
+    "@storybook/addon-links": "^6.4.20",
+    "@storybook/react": "^6.4.20",
     "@storybook/testing-library": "^0.0.9",
     "@types/react": "^17.0.41",
     "babel-loader": "^8.2.3",
+    "cz-conventional-changelog": "3.3.0",
     "postcss": "^8.4.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -40,6 +43,7 @@
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-terser": "^7.0.2",
+    "semantic-release": "^19.0.2",
     "tslib": "^2.3.1",
     "typescript": "^4.6.2"
   },
@@ -53,5 +57,14 @@
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.5.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/nikhil-tayal/ui-lib-2.git"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
