--- a/.github/workflows/package-publish.yml
+++ b/.github/workflows/package-publish.yml
@@ -22,11 +22,11 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-        registry-url: https://npm.pkg.github.com
+        registry-url: https://registry.npmjs.org
     - run: yarn
     - run: yarn rollup
     - run: npm publish
       env:
-          NPM_TOKEN: ${{secrets.NPM_TOKEN}}
+          GH_TOKEN: ${{secrets.GH_TOKEN}}
 
 
