--- a/.github/workflows/package-publish.yml
+++ b/.github/workflows/package-publish.yml
@@ -25,8 +25,8 @@ jobs:
         registry-url: https://registry.npmjs.org
     - run: yarn
     - run: yarn rollup
-    - run: npm publish
+    - run: npm run semantic-release
       env:
+          NPM_TOKEN: ${{secrets.NPM_TOKEN}}
           GH_TOKEN: ${{secrets.GH_TOKEN}}
-
 
