--- a/.github/workflows/package-publish.yml
+++ b/.github/workflows/package-publish.yml
@@ -25,6 +25,7 @@ jobs:
         registry-url: https://registry.npmjs.org
     - run: yarn
     - run: yarn rollup
+    - run: npm ci
     - run: npm run semantic-release
       env:
           NPM_TOKEN: ${{secrets.NPM_TOKEN}}
