--- a/.github/workflows/package-publish.yml
+++ b/.github/workflows/package-publish.yml
@@ -23,10 +23,9 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         registry-url: https://registry.npmjs.org
-    - run: yarn
-    - run: yarn rollup
-    - run: yarn install --frozen-lockfile
-    - run: yarn run semantic-release
+    - run: npm rollup
+    - run: npm ci
+    - run: npm run semantic-release
       env:
           NPM_TOKEN: ${{secrets.NPM_TOKEN}}
           GH_TOKEN: ${{secrets.GH_TOKEN}}
