--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
   "name": "@nikhil-tayal/ui-lib-2",
-  "version": "0.0.0-development",
-  "publishConfig": {
-    "registry": "https://registry.npmjs.org/nikhil-tayal"
-  },
+  "version": "1.0.1",
+
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
