--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "@nikhil-tayal/ui-lib-2",
   "version": "1.0.1",
-
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/nikhil-tayal"
+  },
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
