--- a/.github/workflows/package-publish.yml
+++ b/.github/workflows/package-publish.yml
@@ -23,7 +23,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         # registry-url: https://registry.npmjs.org
-    - run: yarn rollup
+    # - run: yarn rollup
     - run: yarn install --frozen-lockfile
     - run: yarn run semantic-release
       env:
